--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "css-modal": "^1.5.0",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7"
